==> yjh2788/MP3-player_stm32f4/Core/Src/SDcard.cpp <==
#include "SDcard.h"
#include "myfunc.h"
#include <algorithm>
#include "main.h"
#include <cstring>
#include <iostream>
#include "Youn_s_lab_board_info.h"

bool SDcard::SD_Init(SPI_HandleTypeDef *spi) {
	m_spi = spi;

	uint8_t i, j, status = 1, res1, cmd_flag = 0;
	uint8_t r1_response;
	uint8_t r7_response[4];
	uint8_t r3_response[7];
	int count = 0;

	// SDcard check /////////////////////////////////////////////////////

	uint8_t tmphex = 0, response;

	//m_lcd.color_screen(Black);
	//m_lcd.frame();
	m_lcd.string(10, 5, Green, Black,
			(char*) " ******************************");
	m_lcd.string(10, 16, Magenta, Black,
			(char*) "     SD/SDHC initialize...     ");
	m_lcd.string(10, 28, Green, Black,
			(char*) " ******************************");
//////////////////////////////////////////////////////////////////

	SPI_speed_175kHz(); // SPI 250kHz (100 ~ 400 kHz)
	//SPI_speed_350kHz();
// SD_CS = High로 놓고 Dummy Data 10번 전송
// 74 클럭 이상 인가해서 SPI 모드 진입
	SD_deselect();
	for (i = 0; i < 20; i++) {
		SPI_write(0xFF);
	}
	HAL_Delay(2);
	SD_select();

	HAL_Delay(2);
	//m_lcd.string(10, 48, Magenta, Black, " CMD0 : ");
	//m_lcd.xy(30, 48);
	START: SD_Command(CMD0, 0);
	do {
		response = SPI_write(0xFF);
	} while (response == 0xFF);

	if (response == 0x01) {
		// IDLE 상태 진입 성공
		SD_deselect();
		m_lcd.string(60, 48, Green, Black, " Card in IDLE state");
		SD_select();
		std::cout << "IDLE state \r" << std::endl;
	} else {
		// 오류 처리
		SD_deselect();
		m_lcd.string(60, 48, Red, Black, "Error");

		std::cout << "error state \r" << std::endl;
		std::cout << "normal" << response << "\r" << std::endl;
		std::cout << std::hex << response << "\r" << std::endl;

		//m_lcd.hexadecimal(response, 2);
		SD_deselect();
		return 0x01;
	}
//	for (i = 0; i < 10; i++) {
//		tmphex = SPI_write(0xFF);
//		m_lcd.hexadecimal(tmphex, 2);
//		///////////////////////////////////////////////////////
//		std::cout << "tmphex:" << std::hex << (int) tmphex << "\r" << std::endl;
//		///////////////////////////////////////////////////////
//		HAL_Delay(3);
//	}
	SD_deselect();
	m_lcd.string(10, 64, Magenta, Black, " CMD8 : ");
	SD_select();

	SD_Command(CMD8, 0x1AA);
	HAL_Delay(10);

	do {
		r1_response = SPI_write(0xFF);

		if (r1_response == 0x05) {
			sd_type = SD_VER1;
			std::cout << "CMD8: V1.X\r" << std::endl;
			break;
		} else if (r1_response == 0x01) {
			sd_type = SD_VER2;
			std::cout << "CMD8: V2.X\r" << std::endl;
			break;
		} else
			std::cout << "CMD8 failed\r" << std::endl;
		//SD_deselect();
		//return 0x01;
	} while (1);

	switch (sd_type) {
	case SD_VER2:
		// R7 Response 수신 4 u_chars
		// (R1 Response 는 do while 에서 수신)

		for (i = 0; i < 4; i++)		//receive r7 response
			r7_response[i] = SPI_write(0xFF);

		if (r1_response == 0x05) {
			SD_deselect();
			m_lcd.string(100, 64, Green, Black, "/ V1.X");
			SD_select();

		} else if (r1_response == 0x01) {
			SD_deselect();
			m_lcd.string(100, 64, Green, Black, "/ V2.X");
			SD_select();
		}

		if ((r7_response[2] == 0x01) && (r7_response[3] == 0xAA)) {

			//SPI_write(0xFF);
			do {
				// 5번 이상 반복해야 R1 Response = 0x0 수신 가능
				SD_deselect();
				m_lcd.string(10, 80, Magenta, Black, " CMD55: ");
				SD_select();

				SD_Command(CMD55, 0);
				HAL_Delay(10);
				// R1 Response
				do {
					response = SPI_write(0xFF);
				} while (response == 0xFF);
				if (response == 0x01) {
					std::cout << "CMD55 success \r" << std::endl;
					SD_deselect();
					m_lcd.string(60, 80, Magenta, Black, "success");
					SD_select();
				} else {
					std::cout << "CMD55 failed\r" << std::endl;
					SD_deselect();
					m_lcd.string(60, 80, Magenta, Black, " failed ");
					SD_select();
					//return 0x01;
				}

				//printString(tftm_lcd_xpos, tftm_lcd_ypos, "\n", 0xFFFF, 0x0, 1);

				SPI_write(0xFF);
				SPI_write(0xFF);

				SD_deselect();
				m_lcd.string(10, 96, Magenta, Black, " ACMD41:");
				SD_select();

				SD_Command(CMD41, 0x40000000); // HCS bit = 1
				HAL_Delay(10);
				do {
					response = SPI_write(0xFF);
				} while (response == 0xFF);

				if (response == 0x00) {
					SD_deselect();
					m_lcd.string(60, 96, Magenta, Black, "success");
					SD_select();
					std::cout << "CMD41 success\r" << std::endl;
					std::cout << "res1=" << std::hex << int(response) << "\r"
							<< std::endl;
					break;
				} else {
					SD_deselect();
					m_lcd.string(60, 96, Magenta, Black, " failed ");
					SD_select();
					std::cout << "CMD41 failed\r" << std::endl;
					//SD_deselect();
					//return 0x01;
				}
//				for (i = 0; i < 10; i++) {
//					res1 = SPI_write(0xFF);		// R1 Response
//					if (res1 == 0x0)
//						cmd_flag = 1;
//
//				}
				std::cout << "res1=" << std::hex << int(response) << "\r"
						<< std::endl;

				HAL_Delay(100);
				count++;
			} while (count < 50);
			if (count >= 50) {
				count = 0;
				goto START;
			}
		} //end of if
		else {
			std::cout << "cmd failed\r" << std::endl;
			goto START;
		}

		//while((r7_response[2] == 0x01 && r7_response[3] == 0xAA));
		//if(cmd_flag == 1) //printString(tftm_lcd_xpos, tftm_lcd_ypos, "SD ready!\n", 0xFFFF, 0xF800, 2);
		SD_deselect();
		m_lcd.string(10, 112, Magenta, Black, " CMD58: "); // send CMD58(check SDHC)
		SD_select();
		//m_lcd.color(Cyan, Black);
		SD_Command(CMD58, 0);			// check ccs bit
		HAL_Delay(10);

		for (i = 0; i < 5; i++) {
			r3_response[0] = SPI_write(0xff);
			HAL_Delay(3);
			if (r3_response[0] == 0x0) {
				for (j = 1; j < 5; j++) {
					r3_response[j] = SPI_write(0xff);
					HAL_Delay(3);
				}
				break;
			}
		}
		if ((r3_response[1] & 0x40) != 0) {
			sd_type = SD_VER2_HC;
			SD_deselect();
			m_lcd.string(100, 112, Magenta, Black, "(SDHC)");
			SD_select();
		} else {
			sd_type = SD_VER2_SD;
			SD_deselect();
			m_lcd.string(100, 112, Magenta, Black, "(SD)");
			SD_select();
		}

		for (i = 0; i < 10; i++) {
			SPI_write(0xFF);
			HAL_Delay(1);
		}
		break;

		// case ver1
	case SD_VER1:
		for (j = 0; j < 5; j++) {
			SD_Command(CMD55, 0);
			HAL_Delay(10);
			for (i = 0; i < 10; i++) {
				SPI_write(0xFF);
				HAL_Delay(3);
			}

			SD_Command(CMD41, 0x00000000);
			HAL_Delay(10);
			for (i = 0; i < 10; i++) {
				SPI_write(0xFF);
				HAL_Delay(3);
			}
		}
		break;
	}
	//	SD_CS = 1;
	SD_deselect();

	m_lcd.string(40, 128, Green, Black, "initialize complete");
	std::cout << "sd card initialized \r" << std::endl;
	return 0;

}

void SDcard::SD_Read(uint32_t sector) {
	uint16_t i;
	//SPI_speed_6MHz();
	SPI_speed_1_4MHz();
	//SPI_speed_350kHz();

	// High Capacity 카드가 아니면 섹터번호에 *512

	//	SD_CS = 0;			// SD_CS = Low (SD 카드 활성화)
	SD_select();
	//HAL_Delay(1);

	SD_Command(CMD17, sector);
	//std::cout<<std::hex<<(int)status<<std::endl;
	while (SPI_write(0xFF) != 0x00) {
		//std::cout<<std::hex<<(int)SPI_write(0xFF)<<"\r"<<std::endl;
	}

	// wait for R1 = 0x00
	//blink(1);
	//std::cout << "0x00 checked\r" << std::endl;
	while (SPI_write(0xFF) != 0xFE) {
		//std::cout<<std::hex<<(int)SPI_write(0xFF)<<"\r"<<std::endl;
	}
	// wait for Start Block Token = 0xFE
	//check(500);
	//std::cout << "0xfe checked\r" << std::endl;
	for (i = 0; i < 512; i++)
		buffer[i] = SPI_write(0xFF);

	// CRC 수신 (2 byte)
	SPI_write(0xFF);
	SPI_write(0xFF);
	SPI_write(0xFF);

	//	SD_CS = 1;				// SD 카드 비활성화
	SD_deselect();
}

int SDcard::SD_Read(uint32_t sector, uint8_t *buffer) {
	uint16_t i;
	//SPI_speed_6MHz();
	SPI_speed_1_4MHz();
	//SPI_speed_350kHz();

	// High Capacity 카드가 아니면 섹터번호에 *512

	//	SD_CS = 0;			// SD_CS = Low (SD 카드 활성화)
	SD_select();
	//HAL_Delay(1);

	SD_Command(CMD17, sector);
	//std::cout<<std::hex<<(int)status<<std::endl;
	while (SPI_write(0xFF) != 0x00) {
		//std::cout<<std::hex<<(int)SPI_write(0xFF)<<"\r"<<std::endl;
	}

	// wait for R1 = 0x00
	//blink(1);
	//std::cout << "0x00 checked\r" << std::endl;
	while (SPI_write(0xFF) != 0xFE) {
		//std::cout<<std::hex<<(int)SPI_write(0xFF)<<"\r"<<std::endl;
	}
	// wait for Start Block Token = 0xFE
	//check(500);
	//std::cout << "0xfe checked\r" << std::endl;
	for (i = 0; i < 512; i++)
		buffer[i] = SPI_write(0xFF);

	// CRC 수신 (2 byte)
	SPI_write(0xFF);
	SPI_write(0xFF);
	SPI_write(0xFF);

	//	SD_CS = 1;				// SD 카드 비활성화
	SD_deselect();
}

uint8_t SDcard::SPI_write(uint8_t data) {
	uint8_t receivedData = 0;

	if (HAL_SPI_TransmitReceive(m_spi, &data, &receivedData, 1, HAL_MAX_DELAY)
			!= HAL_OK) {
		std::cout << "spi error code:" << m_spi->ErrorCode << "\r" << std::endl;
		Error_Handler();
	} else {
		//std::cout<<"received data="<<std::hex <<static_cast<int>(receivedData)<<"\r"<<std::endl;

	}

	return receivedData;
}

int sd_read(uint32_t sector, uint8_t *buffer) {
	SDcard &sdCardDriver = SDcard::getInstance();
	return sdCardDriver.SD_Read(sector, buffer);
}
