==> yjh2788/atmega128_mp3/SDcard.c <==
#include <util/delay.h>
#include "SDcard.h"
#include <avr/io.h>
#include "TFTLCD_base.h"
#define _BV(n) (1 << n)
#define cbi(reg, bit) reg &= ~(_BV(bit))
#define sbi(reg, bit) reg |= (_BV(bit))
#define check(t) {			\
	PORTD = 0x0;		\
	_delay_ms((t));	\
	PORTD = 0xFF;	\
	_delay_ms((t));		\
}					\

void SD_Init(void)
{
	u_char i, j, status = 1, res1, cmd_flag = 0;
	u_char r1_response;
	u_char r7_response[4];
	u_char r3_response[7];
	
	
	// SD카드 체크 /////////////////////////////////////////////////////
	
	u_char tmphex = 0;
	
	 sbi(DDRB, CS_SD);				// -CS_SD is output
	 TFT_color_screen(Black);
	 TFT_string(0,0,Green,  Black,"******************************");
	 TFT_string(0,2,Magenta,Black,"     SD/SDHC initialize...     ");
	 TFT_string(0,4,Green,  Black,"******************************");
//////////////////////////////////////////////////////////////////
	
	_delay_ms(100);
	SPI_mode0_slow(); // SPI 250kHz (100 ~ 400 kHz)
	
	// SD_CS = High로 놓고 Dummy Data 10번 전송
	// 74 클럭 이상 인가해서 SPI 모드 진입
	sbi(PORTB, SD_CS);
	for(i=0; i<10; i++) SPI_write(0xFF);
	
	//	SD_CS = 0;
	cbi(PORTB, SD_CS);
	///////////////////////////////////////////////////////
	//printString(tftlcd_xpos, tftlcd_ypos, "CMD 0 : ", 0xFFFF, 0x0, 1);
	///////////////////////////////////////////////////////
	_delay_ms(1);
	
	SD_Command(CMD0, 0);
	_delay_ms(10);
	
	for(i = 0; i<10 ;i++){
		tmphex = SPI_write(0xFF);
		///////////////////////////////////////////////////////
		//printHex(tftlcd_xpos, tftlcd_ypos, tmphex, 1);
		//printString(tftlcd_xpos, tftlcd_ypos, " ", 0xFFFF, 0x0, 1);
		///////////////////////////////////////////////////////
		_delay_ms(3);
	}
	
	SD_Command(CMD8, 0x1AA);
	///////////////////////////////////////////////////////
	//printString(tftlcd_xpos, tftlcd_ypos, "\nCMD8 : ", 0xFFFF, 0x0, 1);
	///////////////////////////////////////////////////////
	_delay_ms(10);
	
	do {
		r1_response = SPI_write(0xFF);

		if(r1_response == 0x05){
			sd_type = SD_VER1;
			///////////////////////////////////////////////////////
			//printString(tftlcd_xpos, tftlcd_ypos, "V1.x\n", 0xFFFF, 0xF800, 1);
			///////////////////////////////////////////////////////
			break;
		}
		else if(r1_response == 0x01){
			sd_type = SD_VER2;
			///////////////////////////////////////////////////////
			//printString(tftlcd_xpos, tftlcd_ypos, "V2.x\n", 0xFFFF, 0xF800, 1);
			///////////////////////////////////////////////////////
			break;
		}
	} while(1);
	
	
	switch(sd_type){
		case SD_VER2:
		// R7 Response 수신 4 u_chars
		// (R1 Response 는 do while 에서 수신)
		for(i = 0; i<4; i++) r7_response[i] = SPI_write(0xFF);
		
		if(r7_response[2] == 0x01 && r7_response[3] == 0xAA){
			// check(500);
			/*
			while(SPI_write(0xFF) != 0){
				SD_Command(CMD55, 0);
				SD_Command(CMD41, 0X40000000);
			}
			*/
			//check(500);
			
			// 확인
			//check(500);
			
			SPI_write(0xFF);
			for(j=0; j<10; j++){
				// 5번 이상 반복해야 R1 Response = 0x0 수신 가능
				
				SD_Command(CMD55, 0);
				///////////////////////////////////////////////////////
				///printString(tftlcd_xpos, tftlcd_ypos, "CMD55 : ", 0xFFFF, 0x0, 1);
				///////////////////////////////////////////////////////
				// R1 Response
				for(i=0;i<3;i++){
					tmphex = SPI_write(0xFF);
					///////////////////////////////////////////////////////
					//printHex(tftlcd_xpos, tftlcd_ypos, tmphex, 1);
					//printString(tftlcd_xpos, tftlcd_ypos, " ", 0xFFFF, 0x0, 1);
					///////////////////////////////////////////////////////
					
				}
				//printString(tftlcd_xpos, tftlcd_ypos, "\n", 0xFFFF, 0x0, 1);
				
				SD_Command(CMD41, 0x40000000); // HCS bit = 1
				for(i =0 ; i< 10; i++){
					res1 = SPI_write(0xFF);		// R1 Response 
					if(res1 == 0x0) cmd_flag = 1;
					//printHex(tftlcd_xpos, tftlcd_ypos, res1, 1);
					//printString(tftlcd_xpos, tftlcd_ypos, " ", 0xFFFF, 0x0, 1);
				}
				//printString(tftlcd_xpos, tftlcd_ypos, "\n", 0xFFFF, 0x0, 1);
				_delay_ms(3);
			}	
		} //end of if
		if(cmd_flag == 1) //printString(tftlcd_xpos, tftlcd_ypos, "SD ready!\n", 0xFFFF, 0xF800, 2);
		
		SD_Command(CMD58, 0);			// check ccs bit
		_delay_ms(10);
		
		for(i = 0;i <5;i++){
			r3_response[0] = SPI_write(0xff);
			_delay_ms(3);
			if(r3_response[0] == 0x0){
				for(j = 1; j<5; j++){
					r3_response[j] = SPI_write(0xff);
					_delay_ms(3);
				}
				break;
			}
		}
		if((r3_response[1] & 0x40) != 0){ 
			sd_type = SD_VER2_HC;
			//printString(tftlcd_xpos, tftlcd_ypos, "SDHC card\n", 0xFFFF, 0xF800, 1);
		}
		else {sd_type = SD_VER2_SD;
			//printString(tftlcd_xpos, tftlcd_ypos, "SDSD card\n", 0xFFFF, 0xF800, 1);
		}
		
		for(i = 0; i<10; i++){
			SPI_write(0xFF);
			_delay_ms(1);
		}
		break;
		
		
		// case ver1
		case SD_VER1:
		for(j = 0; j<5; j ++){
			SD_Command(CMD55, 0);
			_delay_ms(10);
			for(i = 0; i < 10; i++){
				SPI_write(0xFF);
				_delay_ms(3);
			}
			
			SD_Command(CMD41, 0x00000000);
			_delay_ms(10);
			for(i=0;i<10;i++){
				SPI_write(0xFF);
				_delay_ms(3);
			}
		}
		break;
	}
	//	SD_CS = 1;
	sbi(PORTB, SD_CS);
}

void SD_Read(uint32_t sector)
{
	uint16_t i;
	SPI_mode0_4MHz();
	
	// High Capacity 카드가 아니면 섹터번호에 *512
	if(sd_type == SD_VER1 || sd_type == SD_VER2_SD) sector = sector << 9;
	
	//	SD_CS = 0;			// SD_CS = Low (SD 카드 활성화)
	cbi(PORTB, SD_CS);
	//_delay_ms(100);
	
	SD_Command(CMD17, sector);

	while(SPI_write(0xFF) != 0x00);		// wait for R1 = 0x00
	while(SPI_write(0xFF) != 0xFE);		// wait for Start Block Token = 0xFE
	//check(500);
	for(i=0; i<512; i++) buffer[i] = SPI_write(0xFF);
	
	// CRC 수신 (2 byte)
	SPI_write(0xFF);
	SPI_write(0xFF);
	SPI_write(0xFF);
	
	//	SD_CS = 1;				// SD 카드 비활성화
	sbi(PORTB, SD_CS);
}

u_char SPI_write(u_char data)
{
	SPDR = data;
	while(!(SPSR & 0x80));	// SPIF = 1 때까지(종료) 대기
	
	return SPDR;
}
